# LifeGame

./: CMakeLists.txt
src/: constants.c  constants.h  main.c
src/field/: field.c  field.h
src/mechanic/: mechanic.c  mechanic.h
src/renderer/: renderer.c  renderer.h
src/utils/: utils.c  utils.h
